QC-88-Adding all PR API CALLS AND CREATE A NEW CSV FILE TO SAVE JSON DATA

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2407,6 +2407,18 @@
       <UserCode>true</UserCode>
       <id>0ce3b888-382c-49d3-a06c-c79d015d5b66</id>
     </Compile>
+    <Compile Include="G_NextSate.cs">
+      <BoundTo>44b08af0-2313-4767-ae7e-3e742971eafe</BoundTo>
+      <DependentUpon>G_NextSate.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>249b406e-a1c2-42d7-8d3f-a1e9887af76f</id>
+    </Compile>
+    <Compile Include="G_NextSate.UserCode.cs">
+      <BoundTo>44b08af0-2313-4767-ae7e-3e742971eafe</BoundTo>
+      <DependentUpon>G_NextSate.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>2fc1f4d2-0cb5-4bea-9ea8-f17c5c68c696</id>
+    </Compile>
     <Compile Include="InternalAPIModules\AuthenticateAsInternalUser.cs">
       <DependentUpon>AuthenticateAsInternalUser.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -3201,6 +3213,138 @@
       <DependentUpon>UB01.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>f272a86e-92f9-4ffe-a93e-cbf55fd85818</id>
+    </Compile>
+    <Compile Include="UB02.cs">
+      <BoundTo>f08e7646-c022-4980-a24c-1c0849a571e8</BoundTo>
+      <DependentUpon>UB02.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>6de8bcf9-32f6-4c95-a234-9fb8ffe54929</id>
+    </Compile>
+    <Compile Include="UB02.UserCode.cs">
+      <BoundTo>f08e7646-c022-4980-a24c-1c0849a571e8</BoundTo>
+      <DependentUpon>UB02.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>16f8fd22-33fd-4dad-a049-69d7991f3e0a</id>
+    </Compile>
+    <Compile Include="UB03.cs">
+      <BoundTo>10e3752e-3173-4be4-8986-d4c224e2d452</BoundTo>
+      <DependentUpon>UB03.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>84e7243c-b0f8-41f7-b690-3617705c5b6c</id>
+    </Compile>
+    <Compile Include="UB03.UserCode.cs">
+      <BoundTo>10e3752e-3173-4be4-8986-d4c224e2d452</BoundTo>
+      <DependentUpon>UB03.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>7dcf7ead-2553-40a8-bb1e-537f7f2c696a</id>
+    </Compile>
+    <Compile Include="UB04.cs">
+      <BoundTo>87518b08-e59f-4723-8d7c-81a9ca6790a0</BoundTo>
+      <DependentUpon>UB04.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>ab122e9a-fde6-41cb-84ce-88ae3a9a4b57</id>
+    </Compile>
+    <Compile Include="UB04.UserCode.cs">
+      <BoundTo>87518b08-e59f-4723-8d7c-81a9ca6790a0</BoundTo>
+      <DependentUpon>UB04.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>5ae35886-4f6d-4eab-8839-92722f8aebd4</id>
+    </Compile>
+    <Compile Include="UB05.cs">
+      <BoundTo>8e473dca-5ede-4c59-8958-a044b99bda34</BoundTo>
+      <DependentUpon>UB05.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>bd6d4044-c737-4004-a367-02f9fa7d5007</id>
+    </Compile>
+    <Compile Include="UB05.UserCode.cs">
+      <BoundTo>8e473dca-5ede-4c59-8958-a044b99bda34</BoundTo>
+      <DependentUpon>UB05.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>93af8b88-564e-4380-a433-0e7b1c3a9cc6</id>
+    </Compile>
+    <Compile Include="UB06.cs">
+      <BoundTo>26eb0bba-9dcb-46d1-8da1-0bb407a65527</BoundTo>
+      <DependentUpon>UB06.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>894d1629-c81b-46a7-9688-96f6b9d7589a</id>
+    </Compile>
+    <Compile Include="UB06.UserCode.cs">
+      <BoundTo>26eb0bba-9dcb-46d1-8da1-0bb407a65527</BoundTo>
+      <DependentUpon>UB06.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ea2d88cb-3552-4bff-985f-2b2aa00f938b</id>
+    </Compile>
+    <Compile Include="UB07.cs">
+      <BoundTo>45d129f1-238b-4933-b3b5-5764c99df0d8</BoundTo>
+      <DependentUpon>UB07.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>9adf4baf-001e-4d1c-860e-0cddf8df8750</id>
+    </Compile>
+    <Compile Include="UB07.UserCode.cs">
+      <BoundTo>45d129f1-238b-4933-b3b5-5764c99df0d8</BoundTo>
+      <DependentUpon>UB07.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>93ff8c88-2ff8-4dcd-8cd3-d2033c4140a2</id>
+    </Compile>
+    <Compile Include="UB08.cs">
+      <BoundTo>a5b61022-15da-4140-aff0-4a2354a2d6c4</BoundTo>
+      <DependentUpon>UB08.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>c2372969-d02a-4137-bd37-6d67bca6c80d</id>
+    </Compile>
+    <Compile Include="UB08.UserCode.cs">
+      <BoundTo>a5b61022-15da-4140-aff0-4a2354a2d6c4</BoundTo>
+      <DependentUpon>UB08.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>fdcef249-3387-40d8-8651-8c135a41df82</id>
+    </Compile>
+    <Compile Include="UB09.cs">
+      <BoundTo>8c5b3baf-5832-44fb-920e-2bb8d478a36d</BoundTo>
+      <DependentUpon>UB09.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>29fb357a-1430-4ccd-8c5b-cd317bef8983</id>
+    </Compile>
+    <Compile Include="UB09.UserCode.cs">
+      <BoundTo>8c5b3baf-5832-44fb-920e-2bb8d478a36d</BoundTo>
+      <DependentUpon>UB09.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>56a5ffe0-8269-48be-a229-d03c510c28d2</id>
+    </Compile>
+    <Compile Include="UB10.cs">
+      <BoundTo>af9052fc-2f23-4264-b8f5-55374c5c03d9</BoundTo>
+      <DependentUpon>UB10.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>3d95c540-1d37-48f4-b57e-26542966a925</id>
+    </Compile>
+    <Compile Include="UB10.UserCode.cs">
+      <BoundTo>af9052fc-2f23-4264-b8f5-55374c5c03d9</BoundTo>
+      <DependentUpon>UB10.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>a53f9f23-68e4-4414-8c0e-964fddc21537</id>
+    </Compile>
+    <Compile Include="UB11.cs">
+      <BoundTo>709f6eb4-1657-438f-95a9-c02b1a63acca</BoundTo>
+      <DependentUpon>UB11.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>3132b8c5-64d0-4913-892a-b80e446e4bd0</id>
+    </Compile>
+    <Compile Include="UB11.UserCode.cs">
+      <BoundTo>709f6eb4-1657-438f-95a9-c02b1a63acca</BoundTo>
+      <DependentUpon>UB11.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>15f548e9-02f3-4ac8-ad09-b02bd937da3b</id>
+    </Compile>
+    <Compile Include="UB12.cs">
+      <BoundTo>7ee74e13-b0c1-4996-b4ee-dc0d11d19277</BoundTo>
+      <DependentUpon>UB12.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>917f2c4d-e7e8-44f3-9cf3-dad65cc23acc</id>
+    </Compile>
+    <Compile Include="UB12.UserCode.cs">
+      <BoundTo>7ee74e13-b0c1-4996-b4ee-dc0d11d19277</BoundTo>
+      <DependentUpon>UB12.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6fda2f95-ee6a-4b0e-b67f-7a75deb49ee8</id>
     </Compile>
     <Compile Include="UsersPage\Add_Role_External_User.cs">
       <id>271a9f76-ce62-4590-ab13-f2658d41a825</id>
@@ -4727,6 +4871,11 @@
       <id>db58994e-0819-422a-a616-9b6d30c3396b</id>
       <recordtableid>e3c111c2-88d1-4da6-adf4-d67326f94bd2</recordtableid>
     </None>
+    <None Include="G_NextSate.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>44b08af0-2313-4767-ae7e-3e742971eafe</id>
+      <recordtableid>5cf24fd9-0cbe-460a-880e-76d4cac8318a</recordtableid>
+    </None>
     <None Include="images\RJ.png">
       <id>6d9e5abf-4447-4cfc-8ad3-859562e71728</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4776,6 +4925,13 @@
       <id>492928c3-8757-4ac0-ac0f-37c518b41407</id>
       <recordtableid>52db9f06-5da5-46a4-b3aa-a782ab8eaa1b</recordtableid>
     </None>
+    <Content Include="JSON.csv">
+      <Link>JSON.csv</Link>
+      <BoundTo>e421d7ee-56d4-498a-bcd8-1c82a2c916a5</BoundTo>
+      <DependentUpon>CSP.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>b72fa0c6-111d-4548-8894-c091715b91b9</id>
+    </Content>
     <None Include="LoginPage\ClickNoButton.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>736781f6-6c3a-402e-9413-966838fac367</id>
@@ -5145,6 +5301,61 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>f062be18-705c-49c9-83be-9611a7adb5a0</id>
       <recordtableid>e84df0e0-2c47-4196-a6cf-07f74623ee54</recordtableid>
+    </None>
+    <None Include="UB02.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>f08e7646-c022-4980-a24c-1c0849a571e8</id>
+      <recordtableid>3a04f0ee-0dea-4286-869d-9095ce51976e</recordtableid>
+    </None>
+    <None Include="UB03.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>10e3752e-3173-4be4-8986-d4c224e2d452</id>
+      <recordtableid>f92a3f6e-33e1-4db1-a655-ad5bb943ecd3</recordtableid>
+    </None>
+    <None Include="UB04.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>87518b08-e59f-4723-8d7c-81a9ca6790a0</id>
+      <recordtableid>f052cac7-17d9-47bf-a47e-4537b5a7d512</recordtableid>
+    </None>
+    <None Include="UB05.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>8e473dca-5ede-4c59-8958-a044b99bda34</id>
+      <recordtableid>f9ab5a2f-0c8e-4cca-afa0-85f28bbf302a</recordtableid>
+    </None>
+    <None Include="UB06.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>26eb0bba-9dcb-46d1-8da1-0bb407a65527</id>
+      <recordtableid>6d8d012b-e6c6-45b0-9580-5226c8049d77</recordtableid>
+    </None>
+    <None Include="UB07.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>45d129f1-238b-4933-b3b5-5764c99df0d8</id>
+      <recordtableid>700db50a-fb14-4223-b676-7426adbc46f5</recordtableid>
+    </None>
+    <None Include="UB08.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>a5b61022-15da-4140-aff0-4a2354a2d6c4</id>
+      <recordtableid>9f29c5d9-01f0-49cc-903d-34a843b73c1f</recordtableid>
+    </None>
+    <None Include="UB09.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>8c5b3baf-5832-44fb-920e-2bb8d478a36d</id>
+      <recordtableid>97dc1385-9355-4363-a2e4-e9a778160b6c</recordtableid>
+    </None>
+    <None Include="UB10.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>af9052fc-2f23-4264-b8f5-55374c5c03d9</id>
+      <recordtableid>b8261353-0c34-40b3-8076-06a0371c4b6b</recordtableid>
+    </None>
+    <None Include="UB11.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>709f6eb4-1657-438f-95a9-c02b1a63acca</id>
+      <recordtableid>d3463bf2-92a2-4729-b553-1836fdb35ec2</recordtableid>
+    </None>
+    <None Include="UB12.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>7ee74e13-b0c1-4996-b4ee-dc0d11d19277</id>
+      <recordtableid>d5203eca-9817-46f7-a0c6-14f5d1de6ffc</recordtableid>
     </None>
     <None Include="UsersPage\Add_Role_External_User.rxrec">
       <id>bbae9c6b-903b-4375-9555-9077f3057673</id>
