QC-83 - Added test scenarios for OneBack to processor project

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4669,6 +4669,18 @@
       <id>cab83a20-0fe3-48dd-8fef-529b14d8c2fd</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\OneBack.csv">
+      <id>24e6e2be-479a-4e4f-b398-40fa41534f01</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OneBackFF.csv">
+      <id>df71e814-d7a3-4ecf-97b6-36babd911ae2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OneBackPF.csv">
+      <id>46fe0d41-3a26-4c6f-93ab-89a72ea3f663</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\PRD1752.csv">
       <id>a03b2d05-2081-4341-b0ff-564da2e2cedf</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5150,6 +5162,18 @@
     </None>
     <None Include="rawData\ISLT.txt">
       <id>0be16bd1-7b47-4a27-ad52-4f0a9d6c732a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OneBack.txt">
+      <id>0f30ba7a-5d21-4012-8598-d80972a59792</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OneBackFF.txt">
+      <id>53f7f7f3-0bf4-4cf1-8149-52799c13e516</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OneBackPF.txt">
+      <id>094571ff-5520-4816-8d21-34a9eaf8d718</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\PartialCBB.txt">
