QC-83 - Added individual Processor test scenarios

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4633,6 +4633,18 @@
       <id>806995ce-4ea8-46ed-89ba-57e6793bde29</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\Detection.csv">
+      <id>989f0e32-88c3-48a2-9d1b-f45152aecdac</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\DetectionFF.csv">
+      <id>34b0c580-0071-48c7-8264-52db918634ad</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\DetectionPF.csv">
+      <id>30f79b81-0eea-4bf3-81f2-00671ce3efde</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\extract1.csv">
       <id>9d814ac2-d49a-46d1-8534-3e3fba54fad0</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4657,6 +4669,50 @@
       <id>0c0f25f3-e782-4705-a4ff-9d9c4f868174</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\GMLTDelay.csv">
+      <id>4329db42-01dd-4206-a10c-948293b9ff78</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTDelayFF.csv">
+      <id>aa4a882b-13e7-48db-a4ec-d81d099c37c4</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTDelayGMLFail.csv">
+      <id>87e277bf-975c-412e-ab5b-4daf6c5c8007</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTFF.csv">
+      <id>feb532b6-7c90-490c-ba9e-4849c469a488</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTPF.csv">
+      <id>7b181bdf-c4fb-4d7b-9e3d-a81ab7fb75ff</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTReverse.csv">
+      <id>962f4c38-a8e9-42b0-b421-224a2f290471</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTReverseFF.csv">
+      <id>5b99c744-fca9-44aa-a88d-0f6efe85bfdb</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\GMLTReverseGMLFail.csv">
+      <id>8fb21292-bbda-494a-8bca-71a7382b43de</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\Identification.csv">
+      <id>d9dc0ea6-29db-4589-b227-cccf1e9743bc</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\IdentificationFF.csv">
+      <id>ae4c5199-236b-49eb-8be1-8b2c363da528</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\IdentificationPF.csv">
+      <id>ca8ea94d-fa2c-43a6-926d-d5749cca0ab8</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\IDSST.csv">
       <id>2cd6bf7f-3bb4-47d9-a37d-ec5bd739ae7c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4665,8 +4721,64 @@
       <id>837cbfa5-3a25-4b6d-bb76-94e58429e9e7</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\ISLTDelay.csv">
+      <id>47f00d0b-132d-45f8-89ca-e2371ebcb21a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTDelayISLFail.csv">
+      <id>57f84aa2-0de3-459f-9c67-12c8faf4c364</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTDelayNA.csv">
+      <id>6d764dbf-5e9b-4262-b9d6-b23251d1b26f</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTDelayNR.csv">
+      <id>55307af9-0325-43fb-acb8-c9a7739b8a72</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTF.csv">
+      <id>6209c027-cc47-4324-9827-628fa25e2165</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTNA.csv">
+      <id>c4e4dcaa-7a84-4a0a-a85f-72bce4fbedd2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTNR.csv">
+      <id>db15024f-773d-44bc-b2d3-57aadea7458e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTRecog.csv">
+      <id>a9c33579-687d-4cd7-b97a-33794a2275e2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTRecogISLFail.csv">
+      <id>9c0b4f5e-a59b-4959-a2ce-58b981ff0203</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTRecogNA.csv">
+      <id>cf8db2fa-34e0-4cef-a958-c1245425fddb</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLTRecogNR.csv">
+      <id>bb1ac370-0ca6-42ab-a058-ccf8ec153d58</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\Manual Calculations Pant.xlsm">
       <id>cab83a20-0fe3-48dd-8fef-529b14d8c2fd</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OCL.csv">
+      <id>69d5215f-b017-4879-8cf3-2be13fe3075e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OCLFF.csv">
+      <id>a11ac065-2a3e-4e42-a1c0-2d6fd2283368</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OCLPF.csv">
+      <id>5eae68fd-d369-487e-886e-376573230951</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\OneBack.csv">
@@ -5140,6 +5252,18 @@
       <id>992bcace-279e-49b1-ae1f-0ba350a72c85</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="rawData\Detection.txt">
+      <id>62bfe119-b5f3-449d-87ec-0100e94e5eba</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\DetectionFF.txt">
+      <id>069294d2-4b7e-4c59-8edc-cbbe52ad7c11</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\DetectionPF.txt">
+      <id>d34108f1-e9a4-471b-91c1-c9391fc658ff</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="rawData\FName.txt">
       <id>6d91b5a5-eaa2-4561-94e1-d84561df5966</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5156,12 +5280,111 @@
       <id>97738831-b76d-49dc-83ed-755955dcb516</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="rawData\GMLTDelay.txt">
+      <id>d2f481da-e426-4717-924b-f3b00c571b5a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTDelayFF.txt">
+      <id>96279b1d-21fc-4d38-96bc-06adc62ff2ca</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTDelayGMLFail.txt">
+      <id>52341cf8-a2ad-421d-9142-c786fd917444</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTFF.txt">
+      <id>0fbf1968-cb1b-4bd9-902d-ad81faa15708</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTPF.txt">
+      <id>1e56edec-feb0-4540-b25a-042e9516f632</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTReverse.txt">
+      <id>8cad5b36-eb7e-4244-95a1-4d12a1e5943d</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTReverseFF.txt">
+      <id>9ef08c32-55e9-4380-b5c9-196d05384ce8</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLTReverseGMLFail.txt">
+      <id>5a1ea5fb-edbc-49bc-baa0-f42599d711d3</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\Identification.txt">
+      <id>a1f439a5-6565-472f-a9f1-de3c5a88fbe0</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\IdentificationFF.txt">
+      <id>bada54a3-3d95-4986-95b0-faeb2d5d49d2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\IdentificationPF.txt">
+      <id>a604c785-b675-488b-be57-f4929559ff18</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="rawData\IDSST.txt">
       <id>7b82a309-00ae-4b63-8717-98e3872cd9ae</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\ISLT.txt">
       <id>0be16bd1-7b47-4a27-ad52-4f0a9d6c732a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTDelay.txt">
+      <id>1f71a6c3-0ce2-46f4-9a2e-4652bc3bcec7</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTDelayISLFail.txt">
+      <id>efb899e3-774f-4282-b63e-1386daa1ac3b</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTDelayNA.txt">
+      <id>1f0a0257-6d6a-4d68-bc59-7708925e3cde</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTDelayNR.txt">
+      <id>e1b46a37-9143-47e8-8129-5c80695a5481</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTF.txt">
+      <id>4af1be92-6e2c-4327-942a-ea8fd104c2ee</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTNA.txt">
+      <id>6a6aa363-0e2d-456c-a090-c201e81670f5</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTNR.txt">
+      <id>bdbe7304-2aa1-4e44-a061-a801d037844c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTRecog.txt">
+      <id>191b3d02-a962-4e77-af0f-015ccff9ffed</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTRecogISLFail.txt">
+      <id>d2950fff-c42d-422d-ab4d-e37dea01ad30</id>
+    </None>
+    <None Include="rawData\ISLTRecogNA.txt">
+      <id>13cfb5d9-71a4-4b10-8ba2-2336c29e8ab0</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLTRecogNR.txt">
+      <id>9e454e1f-c280-487a-8569-fd4d76f56d23</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OCL.txt">
+      <id>88833846-6458-4219-bdf6-7c5f2f90aa12</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OCLFF.txt">
+      <id>d97ced77-e6c8-458b-b3c5-969072e0a67d</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OCLPF.txt">
+      <id>55d53698-5479-40a3-afa9-6d23a50f4889</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\OneBack.txt">
