QC-48: Adding a new API call foe checking RCC versions

--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -52,6 +52,10 @@
     <Reference Include="engine">
       <HintPath>..\..\_assets\engine\bin\$(Configuration)\engine.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft SDKs\Azure\.NET SDK\v2.9\bin\plugins\Diagnostics\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Ranorex Automation Helpers">
       <HintPath>..\..\_assets\engine\RanorexAutomationHelpers\bin\$(Configuration)\Ranorex Automation Helpers.dll</HintPath>
     </Reference>
@@ -130,6 +134,11 @@
     </Reference>
     <Reference Include="System.Drawing">
     </Reference>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization.Json" />
+    <Reference Include="System.Web.Extensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Windows.Forms">
     </Reference>
     <Reference Include="System.Xml">
@@ -178,11 +187,47 @@
       <UserCode>true</UserCode>
       <id>94768ad3-dba3-41e4-a6be-e7b17f3a5a5b</id>
     </Compile>
+    <Compile Include="DCTHubversion.cs">
+      <BoundTo>ba1170a1-50c9-4689-a51f-b7411a36dd32</BoundTo>
+      <DependentUpon>DCTHubversion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>7add2387-eab8-4c54-a7d6-f2464888ab0c</id>
+    </Compile>
+    <Compile Include="DCTHubversion.UserCode.cs">
+      <BoundTo>ba1170a1-50c9-4689-a51f-b7411a36dd32</BoundTo>
+      <DependentUpon>DCTHubversion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>78d6a8fd-3136-4ff7-a150-5c5e4185e4fd</id>
+    </Compile>
+    <Compile Include="DCTVHUBV.cs">
+      <BoundTo>cd241174-f913-4865-97ed-4b900ae2fa28</BoundTo>
+      <DependentUpon>DCTVHUBV.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>cedf3d92-cb2b-4bc8-ab97-46d5e9ea3e77</id>
+    </Compile>
+    <Compile Include="DCTVHUBV.UserCode.cs">
+      <BoundTo>cd241174-f913-4865-97ed-4b900ae2fa28</BoundTo>
+      <DependentUpon>DCTVHUBV.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>453994b3-c274-42d4-8615-874fbcac102d</id>
+    </Compile>
     <Compile Include="eSourcePlatformRepository.cs">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
       <RepositoryCode>true</RepositoryCode>
       <id>f537482d-bb21-4a53-98dc-ed9eb32ba61b</id>
+    </Compile>
+    <Compile Include="HUBDCTVesrion.cs">
+      <BoundTo>cadd37ef-5f50-4d2d-b93c-94ec28c9de4b</BoundTo>
+      <DependentUpon>HUBDCTVesrion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>4554acad-11a1-427d-a335-1fdd390b589f</id>
+    </Compile>
+    <Compile Include="HUBDCTVesrion.UserCode.cs">
+      <BoundTo>cadd37ef-5f50-4d2d-b93c-94ec28c9de4b</BoundTo>
+      <DependentUpon>HUBDCTVesrion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>84876868-65fb-487e-9b9a-1724c0c44c9d</id>
     </Compile>
     <Compile Include="PowerBILogin.cs">
       <BoundTo>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</BoundTo>
@@ -257,6 +302,16 @@
       <id>657edab0-3b6f-4c07-a2ea-2583180e20ff</id>
       <recordtableid>e7e659e1-4c5a-43bc-9a7e-4bf52cb9cc4a</recordtableid>
     </None>
+    <None Include="DCTHubversion.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>ba1170a1-50c9-4689-a51f-b7411a36dd32</id>
+      <recordtableid>01b80522-2f5c-42ec-aacb-e89a1e91e2f7</recordtableid>
+    </None>
+    <None Include="DCTVHUBV.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>cd241174-f913-4865-97ed-4b900ae2fa28</id>
+      <recordtableid>5b5d55fe-e7ec-45a2-a13a-ac13838f4b94</recordtableid>
+    </None>
     <None Include="eSourcePlatformRepository.rximg">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
@@ -267,6 +322,11 @@
       <id>1ff89b80-cba6-4f21-a417-c668d100f247</id>
       <repoid>1b4df078-48fd-44ad-b314-173b9dd113af</repoid>
       <reporootid>d677fdb9-00e1-4467-9fce-a84c063e8bd0</reporootid>
+    </None>
+    <None Include="HUBDCTVesrion.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>cadd37ef-5f50-4d2d-b93c-94ec28c9de4b</id>
+      <recordtableid>977dffd0-3492-4a9e-b246-5e9ab54ea207</recordtableid>
     </None>
     <None Include="PowerBILogin.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
