QC-90- Added a test case for checking .NetFrame

--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -229,6 +229,42 @@
       <UserCode>true</UserCode>
       <id>84876868-65fb-487e-9b9a-1724c0c44c9d</id>
     </Compile>
+    <Compile Include="NetFrameworkValidation.cs">
+      <BoundTo>8dd63b52-bece-4894-be8f-8eae37f3d3f6</BoundTo>
+      <DependentUpon>NetFrameworkValidation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f05300b7-dee0-4df4-a295-0880e070fdd9</id>
+    </Compile>
+    <Compile Include="NetFrameworkValidation.UserCode.cs">
+      <BoundTo>8dd63b52-bece-4894-be8f-8eae37f3d3f6</BoundTo>
+      <DependentUpon>NetFrameworkValidation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6a7f6a5e-2c51-4d1d-a5c1-354673fa30f9</id>
+    </Compile>
+    <Compile Include="Net_Framework.cs">
+      <BoundTo>bf2ba199-2907-41f9-80e7-1b167ce9e64f</BoundTo>
+      <DependentUpon>Net_Framework.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>a2b25655-fe58-4733-b432-0feb851283d5</id>
+    </Compile>
+    <Compile Include="Net_Framework.UserCode.cs">
+      <BoundTo>bf2ba199-2907-41f9-80e7-1b167ce9e64f</BoundTo>
+      <DependentUpon>Net_Framework.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c6a7b877-92ca-4683-80b5-c08c0e31b823</id>
+    </Compile>
+    <Compile Include="OpenAzLocation.cs">
+      <BoundTo>553a8476-098f-4f72-83bb-8ed52f43b7ea</BoundTo>
+      <DependentUpon>OpenAzLocation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>36eecd8d-2d01-4cf3-8c17-41c31f18a1b9</id>
+    </Compile>
+    <Compile Include="OpenAzLocation.UserCode.cs">
+      <BoundTo>553a8476-098f-4f72-83bb-8ed52f43b7ea</BoundTo>
+      <DependentUpon>OpenAzLocation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f2ed6075-1c9d-4e2e-aaa2-1cfe17932955</id>
+    </Compile>
     <Compile Include="PowerBILogin.cs">
       <BoundTo>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</BoundTo>
       <DependentUpon>PowerBILogin.rxrec</DependentUpon>
@@ -327,6 +363,21 @@
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>cadd37ef-5f50-4d2d-b93c-94ec28c9de4b</id>
       <recordtableid>977dffd0-3492-4a9e-b246-5e9ab54ea207</recordtableid>
+    </None>
+    <None Include="NetFrameworkValidation.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>8dd63b52-bece-4894-be8f-8eae37f3d3f6</id>
+      <recordtableid>fb326cbf-1e96-4635-a5ac-840af6cdb390</recordtableid>
+    </None>
+    <None Include="Net_Framework.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>bf2ba199-2907-41f9-80e7-1b167ce9e64f</id>
+      <recordtableid>c63e787d-f0f7-4502-bc2b-55eac038f926</recordtableid>
+    </None>
+    <None Include="OpenAzLocation.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>553a8476-098f-4f72-83bb-8ed52f43b7ea</id>
+      <recordtableid>d82ce541-c07b-4458-8378-0fcaefdb1f51</recordtableid>
     </None>
     <None Include="PowerBILogin.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
