QC-92 - Added Data and results for Timing CBB, modified Processor report logs

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4817,6 +4817,10 @@
       <id>0d628439-e35b-4f61-909e-edc1701a16da</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimingCBB.csv">
+      <id>716ff7d6-5c5d-490c-b18b-92af8401059d</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TwoBack.csv">
       <id>11c86286-d2df-4dfc-9b0d-86e9641b835a</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5449,6 +5453,10 @@
     </None>
     <None Include="rawData\SAT.txt">
       <id>94276efa-bc67-4143-87b9-a5ffc4ba03cb</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimingCBB.txt">
+      <id>9fd9d164-00cf-471b-a67f-d43c0a7adcd2</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TwoBack.txt">
