QC-91- Cleaned the smoke test variables and added hub versions validation. Added a test case for data validation to API script. Deleted CBB version API call

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2747,6 +2747,18 @@
       <UserCode>true</UserCode>
       <id>6c820647-a78c-41c9-a7d3-d3f38ff2b3ad</id>
     </Compile>
+    <Compile Include="OutComesValidation.cs">
+      <BoundTo>9cb70b49-8647-4215-8393-80a87dc4900a</BoundTo>
+      <DependentUpon>OutComesValidation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f8077c4b-8874-4c95-9fc4-8b19d97f01cf</id>
+    </Compile>
+    <Compile Include="OutComesValidation.UserCode.cs">
+      <BoundTo>9cb70b49-8647-4215-8393-80a87dc4900a</BoundTo>
+      <DependentUpon>OutComesValidation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>d6b468be-ad8e-452b-88dd-e2442e96ba5b</id>
+    </Compile>
     <Compile Include="ParticipantsPage\Change_Enroll_Status.cs">
       <id>c2d06657-c550-4e99-b482-e02ea65bd452</id>
       <BoundTo>98670887-05e3-4a42-a79b-3fb4f8470f17</BoundTo>
@@ -5169,6 +5181,11 @@
       <id>42ac416d-b568-4f7b-a4ea-e75b821c76db</id>
       <recordtableid>ddc58c10-0398-41ce-a566-66eeaa23ff2d</recordtableid>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+    </None>
+    <None Include="OutComesValidation.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>9cb70b49-8647-4215-8393-80a87dc4900a</id>
+      <recordtableid>3eccf15a-aaec-4a30-be95-c20b92f6f4c2</recordtableid>
     </None>
     <None Include="packages.config">
       <id>d64b814a-7bf2-4260-b591-370f7b312894</id>
