QC-92 - Added third TimerIDN scenario and updated the previous two scenarios

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4833,6 +4833,10 @@
       <id>63f801b0-cc22-4695-bdc6-3a2052fb9437</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TimerIDNFF.csv">
+      <id>a3b5847a-fbf6-4853-88b3-70863c91de25</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\TimerIDNPF.csv">
       <id>d6c56792-3967-4e2e-8942-69c32974d909</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -5482,6 +5486,10 @@
     </None>
     <None Include="rawData\TimerIDN.txt">
       <id>58e7f994-041a-484a-9ef1-f344a81414e3</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TimerIDNFF.txt">
+      <id>80f7bea5-6a87-4566-a5f5-483b02abbf40</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\TimerIDNPF.txt">
